--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "react-draggable-wrapper",
   "version": "0.0.1",
   "description": "HTML5 Draggable wrapper for React",
-  "main": "DraggableWrapper.js",
+  "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +24,15 @@
   },
   "homepage": "https://github.com/theekshanawj/react-draggable-wrapper#readme",
   "peerDependencies": {
-    "react": "~16.0"
+    "react": ">=16.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.2.1",
+    "react": ">=16.0",
+    "@babel/plugin-transform-react-jsx": "^7.10.1"
   }
 }
